apps/staging/whoami/ingressroute-patch.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  routes:
    - kind: Rule
      match: Host(\`whoami.decentm.local\`)
      services:
        - kind: Service
          name: whoamiv1
          port: 80
