apps/staging/whoami/patch.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv1
  namespace: whoamiv1
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: whoamiv1
          args:
            - -ascii
            - -name=STAGING
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoamiv1
spec:
  routes:
    - kind: Rule
      match: Host(\`whoami.cluster.decentm.local\`)
      services:
        - kind: Service
          name: whoamiv1
          port: 80
